force-app/main/default/objects/SidoCode_Set__mdt/SidoCode_Set__mdt.object-meta.xml
<CustomObject>
    <description>어린이집정보공개포털 API 파라미터</description>
    <label>SidoCode_Set</label>
</CustomObject>