force-app/main/default/objects/SidoCode_Set__mdt/fields/City__c.field-meta.xml
<CustomField>
    <fullName>City__c</fullName>
    <label>City</label>
    <length>10</length>
    <type>Text</type>
</CustomField>