force-app/main/default/objects/SidoCode_Set__mdt/fields/SidoCode__c.field-meta.xml
<CustomField>
    <fullName>SidoCode__c</fullName>
    <label>SidoCode</label>
    <length>5</length>
    <type>Text</type>
</CustomField>