force-app/main/default/objects/SidoCode_Set__mdt/fields/SiGunGuName__c.field-meta.xml
<CustomField>
    <fullName>SiGunGuName__c</fullName>
    <label>SiGunGuName</label>
    <length>10</length>
    <type>Text</type>
</CustomField>